# karbon

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_PRINCIPLES.md  DEV_PLAN.md  FULL_JOURNEY.md  GLOSSARY.md  HARDWARE_TOPOLOGY.md  MIGRATION.md  Makefile  PLAN.md  README.md  ROADMAP.md  pyproject.toml
configs/: crafter_run.yaml  crafter_smoke.yaml  phase0_protozoan.yaml  phase1_infant_home.yaml  phase2_infant_exploration.yaml  phase9_llm_fusion.yaml  stage0_baseline.yaml  stage1_curiosity.yaml  stage2_hybrid.yaml  stage3_world_model.yaml  stage3_world_model_v10_reward_on_noplanner.yaml  stage3_world_model_v2.yaml  stage3_world_model_v3.yaml  stage3_world_model_v4.yaml  stage3_world_model_v5_wide.yaml  stage3_world_model_v6.yaml  stage3_world_model_v8_cf_plan.yaml  stage3_world_model_v9_reward_redesign.yaml  stage4_skills.yaml  stage5_curriculum.yaml  stage6_consolidation.yaml  stage7_3d_birth.yaml  stage7_cognitive.yaml  stage8_full_cognitive.yaml
docs/: open-gaps.md  path-to-northstar.md  stage0_report.md  stage1_report.md  stage2_report.md  stage3_report.md  stage4_report.md  stage5_report.md  stage6_report.md  stage7_report.md
notebooks/: memory_profiling.ipynb  skill_visualization.ipynb  ttt_state_inspection.ipynb
requirements/: base.txt  cpu.txt  cuda121.txt  cuda124.txt  cuda128.txt  dev.txt
scripts/: build_demo_export.py  eval_agent.py  export_hf.py  preflight.py
src/: __init__.py  train.py
tests/: __init__.py  conftest.py  test_actor_critic_encoder.py  test_advanced_cognition.py  (+59 more)
(+113 files in other folders)
