[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devagi"
version = "0.0.0"
description = "Developmental AI: bounded, perpetual, migration-ready research platform"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "Proprietary" }
authors = [{ name = "karbon" }]
keywords = ["developmental-ai", "ttt", "continual-learning", "intrinsic-motivation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "cuda: requires CUDA GPU",
    "triton: requires Triton",
    "slow: slow test (>10s)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks", "logs", "checkpoints", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "N803", "N806"]  # tolerate ML-style short var names

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_return_any = false
ignore_missing_imports = true
